--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "@omernave-vonage/api-tester",
   "version": "1.0.5",
   "description": "A framework for simple API testing",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
     "test": "npm run test"
   },
   "repository": {
@@ -21,8 +24,7 @@
   "homepage": "https://github.com/omernave1/api-tester#readme",
   "dependencies": {
     "handlebars": "^4.7.6",
-    "js-yaml": "^4.0.0",
-    "tslint": "^6.1.3"
+    "js-yaml": "^4.0.0"
   },
   "devDependencies": {
     "@types/jest": "^23.3.9",
@@ -30,9 +32,11 @@
     "@types/supertest": "^2.0.6",
     "jest": "^26.6.3",
     "jest-html-reporters": "^2.1.2",
-    "prettier": "2.2.1",
+    "prettier": "^2.2.1",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.3"
   }
 }
