--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@omernave-vonage/api-tester",
-  "version": "1.0.9",
+  "version": "1.0.11",
   "description": "A framework for simple API testing",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -27,15 +27,16 @@
   ],
   "homepage": "https://github.com/omernave1/api-tester#readme",
   "dependencies": {
-    "handlebars": "^4.7.6",
-    "js-yaml": "^4.0.0"
+    "handlebars": "^4.7.6"
   },
   "devDependencies": {
     "@types/jest": "^23.3.9",
+    "@types/js-yaml": "^4.0.0",
     "@types/node": "^10.12.0",
     "@types/supertest": "^2.0.6",
     "jest": "^26.6.3",
     "jest-html-reporters": "^2.1.2",
+    "js-yaml": "^4.0.0",
     "prettier": "^2.2.1",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
