--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@omernave-vonage/api-tester",
-  "version": "1.0.14",
+  "version": "1.0.16",
   "description": "A framework for simple API testing",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -41,6 +41,7 @@
     "ts-jest": "^26.4.4",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "jest-retries": "^1.0.1"
   }
 }
